--- a/stories/index.html
+++ b/stories/index.html
@@ -3054,10 +3054,22 @@
       <td><a name="jam0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/jam/0027_disizhan_slides.html" target="_blank">Disizhan</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/jam/0030_fiilinz_slides.html" target="_blank">Fiilinz</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="jam0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0066</td>
+      <td><a href="/stories/jam/0066_nuozibele-an-di-chrii-straan-a-ier_slides.html" target="_blank">Nuozibele an di chrii straan a ier</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -3082,6 +3094,12 @@
       <td><a href="/stories/jam/0095_zama-a-di-bes_slides.html" target="_blank">Zama a di bes!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="jam0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0110</td>
+      <td><a href="/stories/jam/0110_wan-biini-siid-di-stuori-bout-wangaari-matai_slides.html" target="_blank">Wan Biini Siid: Di Stuori Bout Wangaari Matai</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -6949,7 +6967,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#bn0027">bn</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#hu0027">hu</a>, <a href="#it0027">it</a>, <a href="#ja0027">ja</a>, <a href="#ko0027">ko</a>, <a href="#nb0027">nb</a>, <a href="#nn0027">nn</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#bn0027">bn</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#hu0027">hu</a>, <a href="#it0027">it</a>, <a href="#ja0027">ja</a>, <a href="#jam0027">jam</a>, <a href="#ko0027">ko</a>, <a href="#nb0027">nb</a>, <a href="#nn0027">nn</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -6997,7 +7015,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#bn0066">bn</a>, <a href="#de0066">de</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#hu0066">hu</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#ko0066">ko</a>, <a href="#nb0066">nb</a>, <a href="#nn0066">nn</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#tr0066">tr</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#bn0066">bn</a>, <a href="#de0066">de</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#hu0066">hu</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#jam0066">jam</a>, <a href="#ko0066">ko</a>, <a href="#nb0066">nb</a>, <a href="#nn0066">nn</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#tr0066">tr</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -7093,7 +7111,7 @@
       <td>0110</td>
       <td><a href="http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0110">ar</a>, <a href="#bn0110">bn</a>, <a href="#de0110">de</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#hi0110">hi</a>, <a href="#hu0110">hu</a>, <a href="#it0110">it</a>, <a href="#ja0110">ja</a>, <a href="#ko0110">ko</a>, <a href="#nb0110">nb</a>, <a href="#nn0110">nn</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#ur0110">ur</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#bn0110">bn</a>, <a href="#de0110">de</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#hi0110">hi</a>, <a href="#hu0110">hu</a>, <a href="#it0110">it</a>, <a href="#ja0110">ja</a>, <a href="#jam0110">jam</a>, <a href="#ko0110">ko</a>, <a href="#nb0110">nb</a>, <a href="#nn0110">nn</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#ur0110">ur</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
