--- a/stories/jam/0030_fiilinz.html
+++ b/stories/jam/0030_fiilinz.html
@@ -49,7 +49,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Patwa</div><div class="pageb
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
 
-<p>Mi aat fiil evi.</p>
+<p>Mi aat ful wid aal kaina fiilinz.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
