--- a/stories/jam/0110_wan-biini-siid-di-stuori-bout-wangaari-matai_slides.html
+++ b/stories/jam/0110_wan-biini-siid-di-stuori-bout-wangaari-matai_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Fiilinz - Global African Storybook</title>
+  <title>Wan Biini Siid: Di Stuori Bout Wangaari Matai - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="fiilinz" class="slide level1">
-<h1>Fiilinz</h1>
+<section id="wan-biini-siid-di-stuori-bout-wangaari-matai" class="slide level1">
+<h1>Wan Biini Siid: Di Stuori Bout Wangaari Matai</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
-<p>Mi aat ful wid aal kaina fiilinz.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
+<p>Inna wahn vilij slaant wie pan Mount Kenya inna Iist Afrika, wa likl gyal pikni did wok inna di fiil wid ar mada. Shi did niem Wangaari.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
-<p>Mi fiil api wen mi grani tel wi stuori inna di iivlin.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
+<p>Wangaari lov fi de outaduo. Inna ar fambili fuud gyaadn shi dig op di dort wid di kotlas. Shi plaant biini siid inna di waan dort.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
-<p>Mi fiil fuul-fuul wen mi plie wid mi fren.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
+<p>Ar fievaret taim a die a inna di iivlin afta di son gaan dong. Wen it get tuu daak fi si di flouwaz dem, Wangaari nuo se a taim fi go a ar yaad. Shi wuda tek di likl trak dem chuu di fiil dem, an a kraas som riva pan ar wie.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
-<p>Mi fiil bad wen mi faada se im na'av no moni.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
+<p>Wangaari a did wan smaat pikni an kudn wiet fi go a skuul. Bot ar mada an faada did waant ar fi stie uom an elp dem a di yaad. Wen shi ton sevn iez-uol, ar big bredda kanvins ar pierens dem fi mek shi go skuul.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>Mi fiil laik mi mada lov me wen shi og mi op.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
+<p>Shi did laik lorn! Wangaari lorm muor an mour wid evri buk shi riid. Shi du so gud inna skuul so dat dem aks ar fi kom a skuul kom stodi inna Merika. Wangaari di wel api! Shi did waahn nuo muor bout di worl.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,18 +141,81 @@
 </section>
 <section class="slide level1">
 
-<h2 id="fiilinz-1">Fiilinz</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Georgette McGlashen<br> <strong>Language:</strong> Jamaican Creole<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
+<p>A di Yuunivosrti inna Merika Wangaari lorn uoliip a nyuu tingz. Shi stodi bout plaant an ou dem gruo. An shi did memba ou shi did gruo op a plie giem wid ar bredda dem and di kuul shied inna di Kenyan faris dem.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
+<p>Di muor shi lorn, di muor shi riyalaiz se shi lov di Kenya piipl dem. Shi di waahn dem fi bi api an frii. Di muor shi lorn, shi muor si memba ar yaad inna Afrika.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
+<p>Wen shi don ar stodiz, shi go bak a Kenya. Bot ar konchri did chienj op. Som eleva faam schrech out kraas di lan. Di uman dem no av no ud fi mek faiya fi kuk pan. Di piipl dem di puor an di pikni dem did onggri.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
+<p>Wangaari did nuo we fi du. Shi did tiich di uman dem ou fi plaant chrii fram siid. Di uman dem sel di chrii dem an yuu di moni fi luk afta dem fambili dem. Di uman dem did api. Wangaari did elp dem fi fiil powaful an schrang.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
+<p>Az di taim go bai, di nyuu chrii dem ton inna wahn faris, an di riva dem staat ron agen. Nyuuz bout we Wangaari se spred kraas Afrika. Tide, miliyan a chrii gruo fram Wangaari siid dem.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
+<p>Wangaari did wok aad. Piipl aal uova di worl tek nuotis a ar, an gi ar wahn fiemos praiz. Dem kaal it di Nuobl Piis Praiz, an shi a did di fos uman fram Afrika fi eva get it.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
+<p>Wangaari ded inna 2011, bot wi kyan tingk bout ar evritaim wi si wan priti chrii.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="wan-biini-siid-di-stuori-bout-wangaari-matai-1">Wan Biini Siid: Di Stuori Bout Wangaari Matai</h2>
+<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> Georgette McGlashen<br> <strong>Language:</strong> Jamaican Creole<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/feelings'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
