--- a/stories/jam/0111_wa-mek-ipo-no-av-no-ier.html
+++ b/stories/jam/0111_wa-mek-ipo-no-av-no-ier.html
@@ -63,7 +63,7 @@ Basilio Gimo, David Ker<br>Patwa</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
 
-<p>Ipo neva si se Rabit di de-de an step pan Rabit fut bai aksident. Rabit staat baal aaf Ipo an se, “Yu Ipo! yu no si se yu a step pan mi fut?”</p>
+<p>Ipo neva si se Rabit di de-de an step pan Rabit fut bai aksident. Rabit staat baal aaf Ipo an se, “Yu Ipo! Yu no si se yu a step pan mi fut?”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Basilio Gimo, David Ker<br>Patwa</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>Rabit go luk fi Faiya an tel im se, “Gwaan, bon op Ipo wen shi kom outta di waata fi nyam graas. Shi did step pan mi! Faiya ansa se, “No prablem, Rabit, mi fren. Mi wi du we yu aks.”</p>
+<p>Rabit go luk fi Faiya an tel im se, “Gwaan, bon op Ipo wen shi kom outa di waata fi nyam graas. Shi did step pan mi! Faiya ansa se, “No prablem, Rabit, mi fren. Mi wi du we yu aks.”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
