--- a/stories/jam/0111_wa-mek-ipo-no-av-no-ier_slides.html
+++ b/stories/jam/0111_wa-mek-ipo-no-av-no-ier_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>Ipo neva si se Rabit di de-de an step pan Rabit fut bai aksident. Rabit staat baal aaf Ipo an se, &quot;Yu Ipo! yu no si se yu a step pan mi fut?&quot;</p>
+<p>Ipo neva si se Rabit di de-de an step pan Rabit fut bai aksident. Rabit staat baal aaf Ipo an se, &quot;Yu Ipo! Yu no si se yu a step pan mi fut?&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>Rabit go luk fi Faiya an tel im se, &quot;Gwaan, bon op Ipo wen shi kom outta di waata fi nyam graas. Shi did step pan mi! Faiya ansa se, &quot;No prablem, Rabit, mi fren. Mi wi du we yu aks.&quot;</p>
+<p>Rabit go luk fi Faiya an tel im se, &quot;Gwaan, bon op Ipo wen shi kom outa di waata fi nyam graas. Shi did step pan mi! Faiya ansa se, &quot;No prablem, Rabit, mi fren. Mi wi du we yu aks.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
