--- a/stories/jam/0006_anansi-an-wizdom.html
+++ b/stories/jam/0006_anansi-an-wizdom.html
@@ -49,7 +49,7 @@ Ghanaian folktale<br>Patwa</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
 
-<p>Wie bak inna di diez piipl neva nuo notn. Dem neva nuo ou fi plaant fuud, ar ou fi mek klaat, or ou fi mek tuul outta aiyan. Di gad niem Nyaame op ina di skai did av aal a di wizdom fi di worl. Im did kip it sief inna wahn pat we mek outta klie.</p>
+<p>Wie bak inna di diez piipl neva nuo notn. Dem neva nuo ou fi plaant fuud, ar ou fi mek klaat, or ou fi mek tuul outa aiyan. Di gad niem Nyaame op ina di skai did av aal a di wizdom fi di worl. Im did kip it sief inna wahn pat we mek outa klie.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,7 +63,7 @@ Ghanaian folktale<br>Patwa</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
-<p>Anansi get krievn an staat tingk tu imself se, “Mi ago kip di pat sief op a di tap a wahn ai chrii. Den mi wi av it aal tu miself!” Im spin wanhn lang chred, wain it roun di klie pat, an tai it op pan im ches. Im staat fi klaim di chrii. Bot it did aad fi klaim wid di pat a lik op pan im nii dem evritaim.</p>
+<p>Anansi get krievn an staat tingk tu imself se, “Mi ago kip di pat sief op a di tap a wahn ai chrii. Den mi wi av it aal tu miself!” Im spin wahn lang chred, wain it roun di klie pat, an tai it op pan im ches. Im staat fi klaim di chrii. Bot it did aad fi klaim wid di pat a lik op pan im nii dem evritaim.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,14 +77,14 @@ Ghanaian folktale<br>Patwa</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
 
-<p>Inna no taim im riich a di tap a di chrii. Bot den im stap a tingk tu imself se, “Mi sopuoz tu bi di wan wid aal a di wizdom, an si mi bwaai pikni di smaata dan mi! Anansi did so beks bout it so dat im dash we di klie pat outta di chrii.</p>
+<p>Inna no taim im riich a di tap a di chrii. Bot den im stap a tingk tu imself se, “Mi sopuoz tu bi di wan wid aal a di wizdom, an si mi bwaai pikni di smaata dan mi! Anansi did so beks bout it so dat im dash we di klie pat outa di chrii.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p>It brok op inna piisiz pan di grong. Di wizdom did frii fi evribadi shier op. An a so komz piipl lorn ou fi faam, ou fi mek klaat, ou fi mek tuul outta aiyan, an aal di ada tingz dem we piipl nuo ou fi du.</p>
+<p>It brok op inna piisiz pan di grong. Di wizdom did frii fi evribadi shier op. An a so komz piipl lorn ou fi faam, ou fi mek klaat, ou fi mek tuul outa aiyan, an aal di ada tingz dem we piipl nuo ou fi du.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
