--- a/stories/jam/0066_nuozibele-an-di-chrii-straan-a-ier_slides.html
+++ b/stories/jam/0066_nuozibele-an-di-chrii-straan-a-ier_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Fiilinz - Global African Storybook</title>
+  <title>Nuozibele an di chrii straan a ier - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="fiilinz" class="slide level1">
-<h1>Fiilinz</h1>
+<section id="nuozibele-an-di-chrii-straan-a-ier" class="slide level1">
+<h1>Nuozibele an di chrii straan a ier</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
-<p>Mi aat ful wid aal kaina fiilinz.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p>Bak inna di diez, chrii gyal pikni go kalek faiyastik.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
-<p>Mi fiil api wen mi grani tel wi stuori inna di iivlin.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p>Di die did at, so dem go dong a di riva fi swim. Dem ramp an splash op an swim inna di waata.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
-<p>Mi fiil fuul-fuul wen mi plie wid mi fren.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p>Aal af a sodn, dem riyalaiz se di taim liet. Dem ori op an go bak a di vilij.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
-<p>Mi fiil bad wen mi faada se im na'av no moni.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p>Wen dem nieli rich uom, Nuozibele put ar an a ar nek. Shi figet ar chien! &quot;Du, kom bak wid me!&quot; shi beg ar fren dem. Bot ar fren dem se it did tuu liet.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>Mi fiil laik mi mada lov me wen shi og mi op.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p>So Nuozibele go bak a di riva bai arself. Shi fain di chien an did a ori op go uom. Bot shi get laas inna di daaknis.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,18 +141,90 @@
 </section>
 <section class="slide level1">
 
-<h2 id="fiilinz-1">Fiilinz</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Georgette McGlashen<br> <strong>Language:</strong> Jamaican Creole<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p>Wie out shi si lait a kom fram wan ot. Shi ori op an go tuwaadz it an nak pan di duor.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p>Shi did fraitn so tel, wan daag uopm di duor an se, &quot;Wa yu waahn?&quot; &quot;Mi laas an mi niid somwe fi slip,&quot; Nuozibele se. &quot;Kom iihn, ar mi ago bait yu!&quot; di daag se. So Nuozibele go iihn.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p>Den di daag se, &quot;Kuk fi mi!&quot; &quot;Bot mi neva kuk fi no daag bifuor,&quot; shi ansa se. &quot;Kuk, ar mi ago bait yu!&quot; di daag se. So Nuozibele kuk som fuud fi di daag.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p>Den di daag se, &quot;Spred di bed fi mi!&quot; Nuozibele ansa se, &quot;Mi neva spred no bed fi no daag bifuor.&quot; &quot;Spred di bed, ar mi ago bait yu!&quot; di daag se. So Nuozibele spred di bed.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p>Evridie shi afi kuk an swiip an wash fi di daag. Den wan die di daag se, &quot;Nuozibele, tide mi a go luk fi som a mi fren dem. Swiip out di ous kuk di fuud an wash mi tingz dem bifuor mi kom bak.&quot;</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p>Az suuhn as di daag go we, Nuozibele tek chrii straan a ier fram outta ar ed. Shi put wan ier anda di bed, wan biyain a di duor, an wan inna di animal pen. Den shi ron go a ar yaad az faas az shi kyan.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p>Wen di daag kom bak, im luk fi Nuozibele. &quot;Nuozibele, we yu de?&quot; im baal out. &quot;Mi de ya, anda di bed,&quot; di fos ier straan se. &quot;Mi de ya, biyain a di duor,&quot; di sekan ier straan se. &quot;Mi de ya, inna di animal pen,&quot; di tord ier straan se.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p>A da taim de, di daag riyalaiz se Nuozibele trik im op. So im ron an ron aal di wie go a di vilij. Bot Nuozibele bredda dem did a wiet de pan di daag wid som big stik. Di daag ton bak an ron we an nobadi no siim sins.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="nuozibele-an-di-chrii-straan-a-ier-1">Nuozibele an di chrii straan a ier</h2>
+<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Georgette McGlashen<br> <strong>Language:</strong> Jamaican Creole<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/feelings'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
