update nairobi css

--- a/nairobi/index.html
+++ b/nairobi/index.html
@@ -16,6 +16,7 @@
 	<meta name="description" content="Nairobi CSS is a responsive framework for building multilingual literacy sites.
 ">
 	<link rel="stylesheet" href="/nairobi/css/spectre.min.css">
+	<link rel="stylesheet" href="/nairobi/css/nairobi.min.css">
 	<link rel="stylesheet" href="/nairobi/css/fontello.min.css">
 	<link rel="canonical" href="https://global-asp.github.io//nairobi/">
 	<link rel="alternate" type="application/rss+xml" title="Nairobi CSS" href="/nairobi">
@@ -75,20 +76,25 @@
 <h4>Nairobi CSS is a framework for building responsive, mobile-friendly, multilingual literacy websites. This demo site has stories in English and Spanish, as well as several other <a href="/nairobi/about/languages">languages</a>. Source code is available <a href="https://github.com/global-asp/nairobi-css">on GitHub</a>. Enjoy!</h4>
 
 <div class="container">
-  <div class="columns">
-    <div class="column col-3 col-md-4 col-sm-6 col-xs-12">
-      <a class="btn-link" href="/nairobi/stories/en/0087/">
-        <div class="card">
-          <div class="card-image"><img class="img-responsive" src="https://raw.githubusercontent.com/global-asp/gsn-imagebank/master/0087/01.jpg"></div>
-          <div class="card-header">
-            <h3 class="card-title">I like to read!</h3></a>
-            <div class="bar">
-              <div class="bar-item tooltip" data-tooltip="Level 1" style="width:20%;"><a href="/nairobi/stories/en/level1" style="color:white">Level 1</a></div>
-            </div>
-          </div>
-        </div>
-    </div>
-  </div>
+	<div class="columns">
+		<div class="column col-3 col-md-4 col-sm-6 col-xs-12">
+			<div class="card">
+				<div class="card-image">
+					<a class="btn-link" href="/nairobi/stories/en/0087/">
+						<img class="img-responsive" src="https://raw.githubusercontent.com/global-asp/gsn-imagebank/master/0087/01.jpg">
+					</a>
+				</div>
+				<div class="card-header">
+					<a class="btn-link" href="/nairobi/stories/en/0087/">
+						<h3 class="card-title">I like to read!</h3>
+					</a>
+					<div class="bar">
+						<a href="/nairobi/stories/en/level1" class="bar-item tooltip" data-tooltip="Level 1" style="width:20%;">Level 1</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 
