--- a/nairobi/stories/es/level4/index.html
+++ b/nairobi/stories/es/level4/index.html
@@ -16,6 +16,7 @@
 	<meta name="description" content="Nairobi CSS is a responsive framework for building multilingual literacy sites.
 ">
 	<link rel="stylesheet" href="/nairobi/css/spectre.min.css">
+	<link rel="stylesheet" href="/nairobi/css/nairobi.min.css">
 	<link rel="canonical" href="https://global-asp.github.io//nairobi/stories/es/level4/">
 	<link rel="alternate" type="application/rss+xml" title="Nairobi CSS" href="/nairobi">
 	<script src="/nairobi/js/sbc.js"></script>
