--- a/nairobi/stories/fr/index.html
+++ b/nairobi/stories/fr/index.html
@@ -16,6 +16,7 @@
 	<meta name="description" content="Nairobi CSS is a responsive framework for building multilingual literacy sites.
 ">
 	<link rel="stylesheet" href="/nairobi/css/spectre.min.css">
+	<link rel="stylesheet" href="/nairobi/css/nairobi.min.css">
 	<link rel="canonical" href="https://global-asp.github.io//nairobi/stories/fr/">
 	<link rel="alternate" type="application/rss+xml" title="Nairobi CSS" href="/nairobi">
 	<script src="/nairobi/js/sbc.js"></script>
@@ -79,7 +80,7 @@
         <div class="card">
           <div class="card-image"><img class="img-responsive" src="https://raw.githubusercontent.com/global-asp/gsn-imagebank/master/0087/01.jpg"></div>
           <div class="card-header">
-            <h3 class="card-title">J'aime lire</h3>
+            <h3 class="card-title">J’aime lire</h3>
             <div class="bar">
               <div class="bar-item tooltip" data-tooltip="Level 1" style="width:20%;">Level 1</div>
             </div>
